--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.6
+django-debug-toolbar==3.2.2
 djangorestframework==3.12.4
 docutils==0.17.1
 drf-yasg==1.20.0
@@ -18,6 +19,7 @@ pytz==2021.1
 requests==2.26.0
 ruamel.yaml==0.17.14
 ruamel.yaml.clib==0.2.6
+sentry-sdk==1.3.1
 sqlparse==0.4.1
 uritemplate==3.0.1
 urllib3==1.26.6
